# steamapi

./: .gitignore  .pre-commit-config.yaml  Justfile  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/steamapi/: __init__.py  steamapi.py
